# defacto

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/: client.rs  config.rs  defacto.rs  main.rs
